<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sign_in"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:background="@drawable/logotext"
        android:contentDescription="@string/img_logo"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvlogin"
        android:layout_below="@+id/imgLogo"
        android:text="@string/tv_login"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--    Username    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_uname"
        android:layout_below="@+id/tvlogin"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_person_pin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerHorizontal="true"
        app:boxCornerRadiusTopStart="22dp"
        app:boxCornerRadiusTopEnd="22dp"
        app:boxCornerRadiusBottomStart="22dp"
        app:boxCornerRadiusBottomEnd="22dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Password    -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_below="@+id/input_uname"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerHorizontal="true"
        app:boxCornerRadiusTopStart="22dp"
        app:boxCornerRadiusTopEnd="22dp"
        app:boxCornerRadiusBottomStart="22dp"
        app:boxCornerRadiusBottomEnd="22dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:background="@drawable/btn_sign_in"
        android:hint="@string/sign_in"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/input_password"
        android:layout_centerHorizontal="true"
        android:textColorHint="#fff"
        android:layout_width="250dp"
        android:layout_height="60dp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_below="@+id/btn_login"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/tv_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCopy"
        android:layout_below="@+id/tvSignUp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>